# rusic

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  album.patch  com.temidaradev.rusic.json  fix_import.sh  flake.nix  fullscreen.patch  home.patch  jellyfin_library.patch  library.patch  package-lock.json  patch.diff  result  rm_patch.sh  shell.nix  simplify_patch.patch  tailwind.config.js  tailwind.css  test_nsprocessinfo.rs  update_macos_rs.sh
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: tailwind.css  themes.css
aur/: .SRCINFO  PKGBUILD
components/: Cargo.toml
components/src/: album_details.rs  bottombar.rs  desktop_only.rs  fullscreen.rs  lib.rs  mobile_bottombar.rs  playlist_detail.rs  playlist_modal.rs  rightbar.rs  search_genre_detail.rs  search_genres.rs  search_results.rs  selection_bar.rs  settings_items.rs  settings_popups.rs  showcase.rs  sidebar.rs  stat_card.rs  titlebar.rs  track_row.rs
components/src/mobile/: mobile_bottombar.rs  mobile_fullscreen.rs  mobile_sidebar.rs  mod.rs
config/: Cargo.toml
config/src/: lib.rs
data/: com.temidaradev.rusic.metainfo.xml
discord-presence/: Cargo.toml
hooks/: Cargo.toml
hooks/src/: use_library_items.rs  use_player_controller.rs  use_player_task.rs  use_search_data.rs
i18n/: build.rs
kopuz/assets/: icon.icns  main.css  tailwind.css
kopuz/src/: main.rs
kopuz_route/src/: lib.rs
locales/: ar.ftl  de.ftl  en.ftl  he.ftl  hu.ftl  ja.ftl  ro.ftl  ru.ftl  tok.ftl  tr.ftl  uk.ftl  zh-CN.ftl
nix/: package.nix
pages/: Cargo.toml
pages/src/: activity.rs  album.rs  artist.rs  favorites.rs  home.rs  lib.rs  library.rs  logs.rs  playlists.rs  search.rs  settings.rs  theme_editor.rs  ytdlp.rs
pages/src/jellyfin/: album.rs  artist.rs  favorites.rs  home.rs  library.rs  logs.rs  playlists.rs  search.rs
pages/src/local/: album.rs  artist.rs  home.rs  library.rs  logs.rs  playlists.rs
pages/src/server/: activity.rs  album.rs  artist.rs  favorites.rs  home.rs  library.rs  mod.rs  playlists.rs  search.rs  subsonic_sync.rs  unsupported.rs  ytm.rs
player/: Cargo.toml
player/src/: player.rs
player/src/systemint/: linux.rs  macos.rs  mod.rs  windows.rs
reader/: Cargo.toml
reader/src/: lib.rs  metadata.rs  models.rs  utils.rs
rusic/: Cargo.toml  Info.plist
rusic-android/: Cargo.toml
rusic-android/src/: main.rs
rusic-ios/: Cargo.toml  Dioxus.toml
rusic/assets/: icon.icns  main.css  tailwind.css  themes.css
rusic/src/: lib.rs  main.rs
rusic_route/: Cargo.toml
rusic_route/src/: lib.rs
scrobble/: Cargo.toml
server/: Cargo.toml
server/src/: jellyfin.rs  lib.rs  provider.rs  youtube_music.rs
src/: config.rs  gui.rs  main.rs  music.rs  utils.rs  web_audio_store.rs
src/components/: album_details.rs  bottombar.rs  folder_reload_prompt.rs  mod.rs  playlist_detail.rs  playlist_modal.rs  search_bar.rs  search_genre_detail.rs  search_results.rs  showcase.rs  sidebar.rs  track_row.rs
src/hooks/: use_library_items.rs  use_player_controller.rs  use_player_task.rs  use_search_data.rs
src/pages/: album.rs  home.rs  library.rs  playlists.rs  search.rs  settings.rs
src/player/: mod.rs  player.rs
src/player/systemint/: macos.rs  mod.rs
src/reader/: metadata.rs  mod.rs  models.rs  scanner.rs
src/remote/: mod.rs
utils/: Cargo.toml
utils/src/: jellyfin_image.rs  lib.rs  stream_buffer.rs  themes.rs
