[package]
name = "rusic"
version = "0.1.0"
description = "A music tui"
authors = ["temidaradev <ahmet.affan.ebcioglu@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
color-eyre = "0.6.3"
metaflac = "0.2.8"
ratatui-explorer = "0.2.1"
rodio = "0.21.1"
symphonia = "0.5.5"
clap = "4.5.49"
colored = "3.0.0"
ctrlc = "3.5.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"
iced = "0.13.1"
rfd = "0.15.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"]}
directories = "6.0.0"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"