[package]
name = "rusic"
version = "0.1.0"
authors = ["temidaradev <temidaradev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-recursion = "1.0"
lofty = "0.22.4"
rfd = "0.17.2"
percent-encoding = "2.3.2"
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rodio = "0.21.1"
jellyfin-sdk-rust = "0.1.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
