[package]
name = "rusic"
version = "0.1.0"
authors = ["temidaradev <temidaradev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlAudioElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "FileReader",
    "Storage",
    "Navigator",
    "Url",
] }
gloo-timers = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"

[features]
default = ["web"]
web = []

[profile]
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
