[package]
name = "components"
version = "0.3.1"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
rodio = { workspace = true }
utils = { workspace = true }
rusic_route = { workspace = true }
config = { workspace = true }
hooks = { workspace = true }
rand = { workspace = true }
server = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true }

