[package]
name = "hooks"
version = "0.3.3"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
tokio = { workspace = true }
rodio = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
server = { workspace = true }
scrobble = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
discord-presence = { workspace = true }
