[package]
name = "pages"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
components = { workspace = true }
hooks = { workspace = true }
config = { workspace = true }
rfd = { workspace = true }
utils = { workspace = true }
rusic_route = { workspace = true }
rodio = { workspace = true }
